--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span>CITS</span> <br> <br>
-        <h6>(Comprehensive I.T Solutions)</h6>
+        <span>CITS</span>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -771,7 +770,7 @@
 
         <header class="section-header">
           <h2>Our Clients</h2>
-          <p>Temporibus omnis officia</p>
+          <p>Here are Some of Our Clients</p>
         </header>
 
         <div class="clients-slider swiper-container">
@@ -955,14 +954,14 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Cits 2022</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>CITS 2022</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flexstart-bootstrap-startup-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://cits.ng/">CITS NG LTD</a>
       </div>
     </div>
   </footer><!-- End Footer -->
