--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+            <div data-aos="flip-left">
+                
+          <img src="assets/img/hero-img.png" class="top_citsimg img-fluid" alt="">
+            </div>
+
         </div>
       </div>
     </div>
